# Hamster

./: .gitignore  .gitmodules  2  Build.lua  CMakeCache.txt  CMakeLists.txt  Dependencies.lua  Hamster.sln  README.md  build.ninja  cmake-windows.bat  cmake_install.cmake  imgui.ini  log
.cmake/api/v1/reply/: cache-v2-453157e3ea128ff67611.json  cache-v2-76645db56fbb3a3575ae.json  cache-v2-77ff25c3e62ee825109a.json  cache-v2-8662e9576a89bef7df40.json  cache-v2-b4e28cd4dc9525b37a0f.json  cache-v2-ce16a9c377628722f363.json  cache-v2-e9c71f43e8f50d5dcce2.json  cmakeFiles-v1-459635b32be934d16e9e.json  cmakeFiles-v1-7ba3f960db4d6a682809.json  cmakeFiles-v1-82abecb1e15cac018ffd.json  cmakeFiles-v1-86dbb98eb692eaf26be2.json  cmakeFiles-v1-e0d858fbfc9f73457321.json  codemodel-v2-0aa01b03c3d6b991f24e.json  codemodel-v2-0f81811b5d7d82e34094.json  codemodel-v2-17ec6c96fda66063f182.json  codemodel-v2-53d8f4fa423f95f9adab.json  codemodel-v2-665af333dce895f6782a.json  codemodel-v2-6b5d6f8ba34a8251e9ee.json  codemodel-v2-726a47d17e0018a23ec7.json  codemodel-v2-73da7578c795e9a546a8.json  codemodel-v2-7e87a8fe287d6e4be8e0.json  codemodel-v2-88532e40545c8be91cc8.json  codemodel-v2-8e6731a9def3ecfe1f29.json  codemodel-v2-995968d46782064e91f2.json  codemodel-v2-a163c17fa7c435733ffd.json  codemodel-v2-b1089767d92c70f736dd.json  codemodel-v2-b65f97f5792cddceb479.json  codemodel-v2-c3cda2111e3fda6c2a32.json  codemodel-v2-db2cb13027c60533f39f.json  codemodel-v2-ee6c78c3b51626697caf.json  codemodel-v2-f1e83d26977c38f48aaa.json  directory-Hamster-App-e5427cb50eddce64c81d.json  directory-Hamster-Core-Debug-34c2045a9b79c0cc4c00.json  directory-Hamster-Core.Vendor.ImGuizmo-55524d5aa710031f96cd.json  directory-Hamster-Core.Vendor.box2d-eedc495ea3634d231fec.json  directory-Hamster-Core.Vendor.box2d.src-802fe5f5033a9b44f707.json  directory-Hamster-Core.Vendor.box2d.src-Debug-e03b1d7c1445f31e73f5.json  directory-Hamster-Core.Vendor.entt-4fe9b14432924a3afecc.json  directory-Hamster-Core.Vendor.glfw-413aea289435047b3831.json  directory-Hamster-Core.Vendor.glfw-45c9c2413594d2b719fb.json  (+94 more)
.github/workflows/: astro.yml
Hamster-App/: Build-App.lua  CMakeLists.txt  Hamster-App  Hamster-App.vcxproj  cmake_install.cmake  imgui.ini
Hamster-App/Hamster-App.dir/Debug/Hamster-App.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Hamster-App/src/: App.cpp  Player.cpp  Player.h
Hamster-Core/: Build-Core.lua  CMakeLists.txt  Hamster-Core.vcxproj  Hamster-Core.vcxproj.filters  cmake_install.cmake
Hamster-Core/Debug/: Hamster-Core.lib
Hamster-Core/Hamster-Core.dir/Debug/Hamster-Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Hamster-Core.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Hamster-Core/src/: Hamster.h  HamsterPCH.h
Hamster-Core/src/Core/: Application.cpp  Application.cpp.bak  Application.h  Application.h.bak  Base.h  Components.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.cpp.bak  GameObject.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Project.cpp  Project.h  ProjectSerialiser.cpp  ProjectSerialiser.h  Scene.cpp  Scene.h  SceneSerialiser.cpp  SceneSerialiser.h  UUID.cpp  UUID.h  Window.cpp  Window.h  pytest.cpp
Hamster-Core/src/Events/: ApplicationEvents.h  Event.cpp  Event.h  Event.h.bak  GuiEvents.h  InputEvents.h  SceneEvents.h  WindowEvents.h
Hamster-Core/src/Gui/: Gui.cpp  Gui.h  ImGuiLayer.cpp  ImGuiLayer.h  LevelEditor.cpp  LevelEditor.h  Modal.h  Panel.h  PropertyEditor.cpp  PropertyEditor.h  gui.cpp  gui.h
Hamster-Core/src/Physics/: Physics.cpp  Physics.h
Hamster-Core/src/Renderer/: FramebufferTexture.cpp  FramebufferTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Hamster-Core/src/Renderer/DefaultShaders/: FlatShader.fs  FlatShader.vs  SpriteShader.fs  SpriteShader.vs
Hamster-Core/src/Scripting/: HamsterBehaviour.cpp  HamsterBehaviour.h  HamsterScript.cpp  HamsterScript.h  Scripting.cpp  Scripting.h
Hamster-Core/src/Utils/: AssetManager.cpp  AssetManager.h  InputManager.cpp  InputManager.h
Hamster-Docs/: astro.config.mjs  package-lock.json  package.json
Hamster-Docs/src/content/docs/: index.mdx
Hamster-Docs/src/content/docs/guides/: getting-started.mdx
Hamster-Py/: CMakeLists.txt  cmake_install.cmake  test.py
Hamster-Py/src/: Components.h  Core.h  Entity.h  HamsterBehaviour.h  Input.h  Library.h  Log.h  Renderer.h  UUID.h  Utils.h  main.cpp
Hamster-Wheel/: CMakeLists.txt  hi.hs  imgui.ini
Hamster-Wheel/src/: EditorLayer.cpp  EditorLayer.h  HamsterWheelApp.cpp  ProjectHubLayer.cpp  ProjectHubLayer.h  default.ini
Hamster-Wheel/src/Panels/: AssetBrowser.cpp  AssetBrowser.h  Console.cpp  Console.h  FileBrowser.cpp  FileBrowser.h  Hierarchy.cpp  Hierarchy.h  MenuBar.cpp  MenuBar.h  ProjectCreator.cpp  ProjectCreator.h  ProjectSelector.cpp  ProjectSelector.h  PropertyEditor.cpp  PropertyEditor.h  RenameModal.cpp  RenameModal.h  StartPauseModal.cpp  StartPauseModal.h
Hamster-WheelQT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
Scripts/: Setup-Windows.bat  compile.sh  compilePython.sh  setup-linux.sh
cmake-build/: CMakeCache.txt  cmake_install.cmake
cmake-build/Hamster-App/Hamster-App.dir/Debug/: .d.json  Hamster-App.exe.recipe  Hamster-App.ilk  app.cpp.module.json  player.cpp.module.json
cmake-build/Hamster-Core/Debug/: Hamster-Core.lib
cmake-build/Hamster-Core/Hamster-Core.dir/Debug/: .d.json  Hamster-Core.lib.recipe  application.cpp.module.json  assetmanager.cpp.module.json  event.cpp.module.json  gameobject.cpp.module.json  pytest.cpp.module.json  renderer.cpp.module.json  shader.cpp.module.json  stb_image.cpp.module.json  texture.cpp.module.json  window.cpp.module.json
test/: CMakeLists.txt  main.cpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+29 files in other folders)
